refactored poms moved all validation to gateway changing integration tests bookingintegrtest finished tuned other integr tests wtn entity manager